--- a/index.ipynb
+++ b/index.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "SQLAlchemy is a powerful Object Relational Mapper that lets us \"map\" our Python objects to a SQL database.  We can create Python classes that are represented by tables in our database.  Each new instance of a class gets \"mapped\" to a row on a table in our database.  As we are probably well aware by now, writing SQL inserts, updates, and queries can be repetitive and tedious.  SQLAlchemy has a library of built-in methods that handle these tasks in an efficient manner.  In this lab, we will use SQLAlchemy to create a new database and create a table."
+    "SQLAlchemy is a powerful Object Relational Mapper that lets us \"map\" our Python objects to SQL database tables.  Generally, each of our Python classes will have its own table in our database and each new instance of a class gets \"mapped\" to a row on one of these tables.  As we are probably well aware by now, writing SQL inserts, updates, and queries can be a repetitive and tedious process.  SQLAlchemy has a library of built-in methods that handle these tasks in a simple and easy manner.  In this lab, we will use SQLAlchemy to create a new database and create a table."
    ]
   },
   {
@@ -22,7 +22,7 @@
     "\n",
     "1.  Understand that we can map Python classes to a SQL database\n",
     "2.  Create and connect to a SQLite database using SQLAlchemy\n",
-    "3.  Create a table with several columns and different datatypes using SQLAlchemy"
+    "3.  Create a table with several columns and datatypes using SQLAlchemy"
    ]
   },
   {
@@ -56,7 +56,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, we need our Python classes to have the functionality of the *declarative base class*.  The declarative base is responsible for cataloging our classes and tables.  We import the `declarative_base` from the sqlalchemy library at the top of our Python script with the other dependencies as so:"
+    "Next, we need our Python classes to have the functionality of the *declarative base class*.  The declarative base is responsible for cataloging our classes and tables.  We import the `declarative_base` from the SQLAlchemy library at the top of our Python script with the other dependencies as so:"
    ]
   },
   {
@@ -72,24 +72,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Part 2: Create the schema\n",
-    "\n",
-    "#### Construct the musicians table\n",
-    "\n",
-    "Finally, with all this setup out of the way, we are ready to create a SQL table!  The `Musician` class will take the `Base` we declared above as an argument.  The table's name will be `'musicians'`, and it should have the following five columns with these respective datatypes:\n",
-    "\n",
-    "> 1. id - integer\n",
-    "2. fullname - string\n",
-    "3. instrument - string\n",
-    "4. dob - datetime\n",
-    "5. alive - boolean"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We will need to import `Column`, `Integer`, `String`, `DateTime`, and `Boolean` from the sqlalchemy at the top of the `schema.py` file.  By now, we are importing so much of the sqlalchemy library that it probably makes sense to simply import all.\n",
+    "We will need to import `Column`, `Integer`, `String`, `DateTime`, and `Boolean` from the SQLAlchemy library at the top of the `schema.py` file.  By now, we are importing so much of the SQLAlchemy library that it probably makes sense to simply import all using the universal, `*`.\n",
     "\n",
     "> ```from sqlalchemy import *```"
    ]
@@ -120,6 +103,43 @@
     "\n",
     "If the tests don't pass, for now simply delete the `musicians.db` file then try again!"
    ]
+  },
+  {
+    "cell_type": "markdown",
+    "metadata": {},
+    "source": [
+      "### Part 2: Create the schema\n",
+      "\n",
+      "#### Construct the musicians table\n",
+      "\n",
+      "Finally, with all this setup out of the way, we are ready to create a SQL table!  We mentioned above that our classes need to have the functionality of the declarative base class.  How can we achieve this?  We can use object inheritance!  By passing our `Musician` class the `Base` instance we declared above as an argument, our Musician class will inherit all of the functionality of what commonly is referred to as the parent or super class.  \n",
+      "\n",
+      "```python\n",
+      "class Musician(Base):\n",
+      "```\n",
+      "\n",
+      "The table's name will be `'musicians'`, and it should contain the following five columns having these respective datatypes:\n",
+      "\n",
+      "> 1. id - integer\n",
+      "2. fullname - string\n",
+      "3. instrument - string\n",
+      "4. dob - datetime\n",
+      "5. alive - boolean"
+    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Summary"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this lab we learned that declaring a mapping means creating a SQLAlchemy object that takes our python class objects and maps them to our SQL tables and saves them in our database. We also learned the basic setup for importing SQLAlchemy, creating a connection to our database, creating a mapping with a SQL table, and finally how to execute creating the database."
+   ]
   }
  ],
  "metadata": {
@@ -138,7 +158,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
